--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
             <artifactId>jna</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.3</version>
+        </dependency>
 
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
