--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,13 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.7</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
-        </dependency>
+      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+         <dependency>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+              <version>2.10.0.pr1</version>
+         </dependency>
+
 
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
