--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,26 @@
                 </executions>
             </plugin>
 
+            <!--打包之前，拷贝allatori.xml"配置文件到target目录-->
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-allatori-file</id>
+                        <phase>compile</phase>
+                        <configuration>
+                            <tasks>
+                                <copy todir="${basedir}/target/"
+                                      file="${basedir}/src/main/resources/allatori.xml" />
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Allatori plugin start -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
